styles/index.css
@tailwind base;

/* Write your own custom base styles here */

/* Start purging... */
@tailwind components;
/* Stop purging. */

/* Write you own custom component styles here */

/* Start purging... */
@tailwind utilities;
/* Stop purging. */

/* Your own custom utilities */

@media (prefers-color-scheme: dark) {
  body {
    background: #24292e;
    color: #fff;
  }

  input, .search input,
  .react-search-box-dropdown-list-item {
    background: #24292e !important;
    color: white !important;
  }
}

.chord {
  position: relative;
  top: -12px;
  color: #b6ae68;
  font-weight: bold;
  font-style: normal;
}
.song-text {
  line-height: 3rem;
  white-space: pre-line;
}

